Bugs (#472)
* fix(VerifyMobileNumber): overlap in preferences

* fix(UI-Select): fix search and select in send from dropdown

* fix(WatchOnly): move watch only tags underneat tx type

* fix(TxFeed): alignment and overlap

* fix(Send): error messaging in amount

* fix(Send): confirmation color and +/- logic

--- a/assets/css/modules/_layout.scss
+++ b/assets/css/modules/_layout.scss
@@ -87,9 +87,21 @@
 .invisible { visibility: hidden; opacity: 0; }
 
 .height-100 { height: 100%; }
-.width-100 { width: 100%; }
-.width-50 { width: 50%; }
-.width-75 { width: 75%; }
+
+@for $i from 1 through 10 {
+  .width-#{$i}0 {
+    width: #{$i}0%;
+  }
+}
+
+@for $i from 1 through 20 {
+  .width-#{$i*5} {
+    width: percentage($i*5/100);
+    @media (max-width: 768px) {
+      width: auto;
+    }
+  }
+}
 
 .z-10 { z-index: 10; }
 
