--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -66,11 +66,6 @@
     }
   }
 
-  .use-all {
-    cursor: pointer;
-    @extend .blue;
-  }
-
   // when an address is too long
   .ui-select-choices-row-inner {
     > span {
